<resources>
    <string name="app_name">Weather</string>
    <string name="search">Search</string>
    <string name="choose_another">Choose another</string>
    <string name="select_state">Select a state:</string>
    <string name="now">Now</string>
    <string name="day">Today</string>
    <string name="five_days">5 days</string>
    <string name="wind">Wind</string>
    <string name="m_s">m/s</string>
    <string name="wind_gusts">Wind gusts, up to</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Cloud cover</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="precipitation_probability">Precipitation probability</string>
    <string name="visibility">Visibility</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="ok">ОК</string>
    <string name="locate">Locate</string>
    <string name="retry">Retry</string>
    <string name="data_was_not_found">Data was not found</string>
    <string name="error_empty_name">Enter the name</string>

</resources>