<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_basic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/state"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Санкт-Петербург" />

        <TextView
            android:id="@+id/country"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Россия" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/padding_min"
            android:background="@color/title"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/date"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="16 февраля 2025" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_basic"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/now_weather"
            style="@style/TextGreyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now" />

        <TextView
            android:id="@+id/today_weather"
            style="@style/TextGreyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/five_days_weather"
                style="@style/TextTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_days" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/padding_min"
                android:layout_marginEnd="@dimen/padding_basic"
                android:background="@color/title"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_day_weather" />

</LinearLayout>